SF-1144 Fix overlapping text on connect project page in Safari (#879)
- Removed unneeded flex layout options

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/connect-project/connect-project.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/connect-project/connect-project.component.scss
@@ -18,8 +18,6 @@
 }
 
 .content {
-  display: flex;
-  flex-direction: column;
   max-width: 512px;
   width: 100%;
 
@@ -69,9 +67,6 @@
       margin-top: 32px;
 
       .card-title {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
         margin: 8px 16px 0 16px;
       }
 
@@ -86,7 +81,7 @@
 
     #connect-submit-button {
       align-self: center;
-      margin-top: 32px;
+      margin: 32px 0;
       @include button.filled-accessible($pt-button-green);
     }
 
